# Practise

./: CMakeLists.txt
classes/: CMakeLists.txt  classes.cpp  classes.h
data_structures/: CMakeLists.txt  array.cpp  deque.cpp  list.cpp  map.cpp  queue.cpp  set.cpp  stack.cpp  vector.cpp
data_types/: CMakeLists.txt  data_types.cpp
lambda/: CMakeLists.txt  lambda.cpp
pointers_references/: CMakeLists.txt  pointers_references.cpp  shared_pointer.cpp  unique_pointer.cpp  weak_pointer.cpp
templates/: CMakeLists.txt  templates.cpp
