cmake_minimum_required(VERSION 3.22)
project(data_structures)

set(CMAKE_CXX_STANDARD 17)

add_executable(array array.cpp)
add_executable(vector vector.cpp)
add_executable(deque deque.cpp)
add_executable(list list.cpp)
add_executable(set set.cpp)
add_executable(map map.cpp)
add_executable(stack stack.cpp)
add_executable(queue queue.cpp)
